--- a/process_bpd_fio_data.ipynb
+++ b/process_bpd_fio_data.ipynb
@@ -94,8 +94,8 @@
     "@register_transform\n",
     "def rename_frisk_columns(contact_df, people_df):\n",
     "    \"\"\"\n",
-    "    Combine the `frisked` and `searchperson` columns from the *contacts* table into one column called `fc_involved_frisk_or_search`,\n",
-    "    and disambiguate it from a related column in the *people* table by renaming the `frisk/search` column to `person_frisked_or_searched`.\n",
+    "    Combine the `frisked` and `searchperson` columns from the ___contacts___ table into one column called `fc_involved_frisk_or_search`,\n",
+    "    and disambiguate it from a related column in the ___people___ table by renaming the `frisk/search` column to `person_frisked_or_searched`.\n",
     "    As noted on data.boston.gov, the `frisked` and `searchperson` columns (from the \"New RMS\" data system) indicate whether any of the \n",
     "    individuals stopped in a given field contact was frisked, whereas `frisk/search` (from the \"Mark43\" data system) indicates whether\n",
     "    a particular person involved in a field contact was frisked.\n",
@@ -137,7 +137,7 @@
     "@register_transform\n",
     "def vehicle_info_cleanup(contact_df, people_df):\n",
     "    \"\"\"\n",
-    "    Clean up and reconcile vehicle-related field values from the *contacts* table. Across the different data systems, different text values\n",
+    "    Clean up and reconcile vehicle-related field values from the ___contacts___ table. Across the different data systems, different text values\n",
     "    were used to represent identical or overlapping concepts (e.g. \"LT. BLUE\" and \"light blue\", \"Suv (sport Utility Vehicle)\" \n",
     "    and \"SUV or Utility Van\"). Also, drop the `vehicle_style` column, which is basically a noisier version of the `vehicle_type` column.\n",
     "    \"\"\"\n",
@@ -191,8 +191,8 @@
     "@register_transform\n",
     "def contact_date_to_dt(contact_df, people_df):\n",
     "    \"\"\"\n",
-    "    Convert the `contact_date` column in the *contacts* table to datetime, \n",
-    "    and drop a duplicate column from the *people* table.\n",
+    "    Convert the `contact_date` column in the ___contacts___ table to datetime, \n",
+    "    and drop a duplicate column from the ___people___ table.\n",
     "    \"\"\"\n",
     "    contact_df.contact_date = pd.to_datetime(contact_df.contact_date)\n",
     "\n",
@@ -202,7 +202,7 @@
     "@register_transform\n",
     "def clean_officer_and_supervisor_names(contact_df, people_df):\n",
     "    \"\"\"\n",
-    "    Remove extra whitespace from the `contact_officer_name` column in the *contacts* table \n",
+    "    Remove extra whitespace from the `contact_officer_name` column in the ___contacts___ table \n",
     "    to reduce accidental duplication. Also, put officer's first names first.\n",
     "    \"\"\"\n",
     "    observed_names = {}\n",
@@ -239,7 +239,7 @@
     "@register_transform\n",
     "def combine_contact_reason_and_narrative(contact_df, people_df):\n",
     "    \"\"\"\n",
-    "    Merge the *contacts* table's `contact_reason` column into the `narrative` column. `contact_reason` serves the same purpose as `narrative`,\n",
+    "    Merge the ___contacts___ table's `contact_reason` column into the `narrative` column. `contact_reason` serves the same purpose as `narrative`,\n",
     "    just for the older system. Uppercase both columns for consistency.\n",
     "    \"\"\"\n",
     "    empty_narrative = contact_df.narrative.isnull()\n",
@@ -254,7 +254,7 @@
     "@register_transform\n",
     "def clean_up_city(contact_df, people_df):\n",
     "    \"\"\"\n",
-    "    There are lots of typos and inconsistencies in the *contacts* table's `city` column, so fix them.\n",
+    "    There are lots of typos and inconsistencies in the ___contacts___ table's `city` column, so fix them.\n",
     "    Warning: current solution is not robust to *new* typos, should the data change.\n",
     "    \"\"\"\n",
     "    BOSTON = \"BOSTON\"\n",
@@ -321,7 +321,7 @@
     "\n",
     "@register_transform\n",
     "def clean_up_age(contact_df, people_df):\n",
-    "    \"\"\"Remove implausibly high values in the *people* table's `age` column. Also, convert string values to float.\"\"\"\n",
+    "    \"\"\"Remove implausibly high values in the ___people___ table's `age` column. Also, convert string values to float.\"\"\"\n",
     "    people_df.age = people_df.age.apply(\n",
     "        lambda age: np.nan if len(age) > 2 or age == \"\" else np.float(age)\n",
     "    )\n",
@@ -330,7 +330,7 @@
     "\n",
     "@register_transform\n",
     "def combine_skin_tone_and_complexion(contact_df, people_df):\n",
-    "    \"\"\"Merge the *people* table's older `complexion` column into the newer `skin_tone` column.\"\"\"\n",
+    "    \"\"\"Merge the ___people___ table's older `complexion` column into the newer `skin_tone` column.\"\"\"\n",
     "    empty_skin_tone = people_df.skin_tone.isnull()\n",
     "    people_df.loc[empty_skin_tone, \"skin_tone\"] = people_df.complexion[empty_skin_tone]\n",
     "    people_df.skin_tone = people_df.skin_tone.replace({\"OTHER\": \"Other\"})\n",
@@ -341,7 +341,7 @@
     "@register_transform\n",
     "def drop_deceased_column(contact_df, people_df):\n",
     "    \"\"\"\n",
-    "    Drop the `deceased` column from the *people* table, since it doesn't exist in the older system, and since no one \n",
+    "    Drop the `deceased` column from the ___people___ table, since it doesn't exist in the older system, and since no one \n",
     "    is marked deceased in this dataset.\n",
     "    \"\"\"\n",
     "    people_df = people_df.drop(columns=[\"deceased\"])\n",
@@ -350,7 +350,7 @@
     "\n",
     "@register_transform\n",
     "def reconcile_hair_style(contact_df, people_df):\n",
-    "    \"\"\"Reconcile the *people* table's `hair_style` values that seem to mean the same thing.\"\"\"\n",
+    "    \"\"\"Reconcile the ___people___ table's `hair_style` values that seem to mean the same thing.\"\"\"\n",
     "    people_df.hair_style = people_df.hair_style.replace(\n",
     "        {\n",
     "            \"Receding / Thin\": \"Receding or Thin\",\n",
@@ -365,7 +365,7 @@
     "\n",
     "@register_transform\n",
     "def reconcile_race(contact_df, people_df):\n",
-    "    \"\"\"Reconcile *people* table `race` values that seem to mean the same thing.\"\"\"\n",
+    "    \"\"\"Reconcile ___people___ table `race` values that seem to mean the same thing.\"\"\"\n",
     "    people_df.race = people_df.race.replace(\n",
     "        {\"American Indian or Alaskan Native\": \"Native American / Alaskan Native\"}\n",
     "    )\n",
@@ -374,14 +374,14 @@
     "\n",
     "@register_transform\n",
     "def clean_up_state(contact_df, people_df):\n",
-    "    \"\"\"Fix recurrent typo in the *contacts* table `state` column.\"\"\"\n",
+    "    \"\"\"Fix recurrent typo in the ___contacts___ table `state` column.\"\"\"\n",
     "    contact_df.state = contact_df.state.replace({\"MX\": \"MA\"})\n",
     "    return contact_df, people_df\n",
     "\n",
     "\n",
     "@register_transform\n",
     "def reconcile_stop_duration(contact_df, people_df):\n",
-    "    \"\"\"Bucket *contacts* table `stop_duration` column values listed as minutes and remove likely typos.\"\"\"\n",
+    "    \"\"\"Bucket ___contacts___ table `stop_duration` column values listed as minutes and remove likely typos.\"\"\"\n",
     "\n",
     "    def bucket_stop_duration(d: str) -> str:\n",
     "        try:\n",
@@ -418,7 +418,7 @@
     "\n",
     "@register_transform\n",
     "def clean_location_info(contact_df, people_df):\n",
-    "    \"\"\"Combine the *contact* table's `street` and `streetaddr` columns into single `street` column, and trim extra digits from `zip`.\"\"\"\n",
+    "    \"\"\"Combine the ___contacts___ table's `street` and `streetaddr` columns into single `street` column, and trim extra digits from `zip`.\"\"\"\n",
     "    empty_street = contact_df.street.isnull()\n",
     "    contact_df.loc[empty_street, \"street\"] = contact_df.streetaddr[empty_street]\n",
     "    contact_df.street = contact_df.street.apply(lambda s: s.replace(\"&\", \"/\"))\n",
@@ -438,7 +438,7 @@
     "    return contact_df, people_df\n",
     "\n",
     "\n",
-    "clean_contact_df, clean_people_df = apply_transforms(contact_df, people_df)"
+    "clean_contact_df, clean__people__df = apply_transforms(contact_df, people_df)"
    ]
   },
   {
@@ -455,7 +455,7 @@
    "outputs": [],
    "source": [
     "clean_contact_df.to_csv(\"foi_contacts.csv\", index=False)\n",
-    "clean_people_df.to_csv(\"foi_people.csv\", index=False)"
+    "clean__people__df.to_csv(\"foi_people.csv\", index=False)"
    ]
   },
   {
