--- a/process_bpd_fio_data.ipynb
+++ b/process_bpd_fio_data.ipynb
@@ -29,6 +29,8 @@
     "    json = requests.get(url).json()\n",
     "    records = json[\"result\"][\"records\"]\n",
     "    df = pd.DataFrame(records).astype(str)\n",
+    "    # drop \"_id\" column, added by CKAN (I think?)\n",
+    "    df.drop(columns=[\"_id\"], inplace=True)\n",
     "    return df\n",
     "\n",
     "\n",
@@ -92,6 +94,24 @@
     "\n",
     "\n",
     "@register_transform\n",
+    "def lowercase_everything(contact_df, people_df):\n",
+    "    \"\"\"Convert all string columns to lowercase except `fc_num`, since capitalization is inconsistent throughout.\"\"\"\n",
+    "    to_lower = lambda col: col.str.lower()\n",
+    "    \n",
+    "    non_fc_num_cols = contact_df.columns != \"fc_num\"\n",
+    "    contact_df.loc[:, non_fc_num_cols] = contact_df.loc[:, non_fc_num_cols].apply(\n",
+    "        to_lower\n",
+    "    )\n",
+    "\n",
+    "    non_fc_num_cols = people_df.columns != \"fc_num\"\n",
+    "    people_df.loc[:, non_fc_num_cols] = people_df.loc[:, non_fc_num_cols].apply(\n",
+    "        to_lower\n",
+    "    )\n",
+    "\n",
+    "    return contact_df, people_df\n",
+    "\n",
+    "\n",
+    "@register_transform\n",
     "def rename_frisk_columns(contact_df, people_df):\n",
     "    \"\"\"\n",
     "    Combine the `frisked` and `searchperson` columns from the **contacts** table into one column called `fc_involved_frisk_or_search`,\n",
@@ -101,8 +121,8 @@
     "    a particular person involved in a field contact was frisked.\n",
     "    \"\"\"\n",
     "    combine_fields = (\n",
-    "        lambda row: \"Y\"\n",
-    "        if row.frisked == \"Y\" or row.searchperson == \"Y\"\n",
+    "        lambda row: \"y\"\n",
+    "        if row.frisked == \"y\" or row.searchperson == \"y\"\n",
     "        else row.frisked\n",
     "    )\n",
     "    combined_values = contact_df[[\"frisked\", \"searchperson\"]].apply(\n",
@@ -113,7 +133,7 @@
     "\n",
     "    people_df = people_df.rename(columns={\"frisk/search\": \"person_frisked_or_searched\"})\n",
     "    people_df.person_frisked_or_searched = people_df.person_frisked_or_searched.replace(\n",
-    "        {\"0\": \"N\", \"1\": \"Y\"}\n",
+    "        {\"0\": \"n\", \"1\": \"y\"}\n",
     "    )\n",
     "\n",
     "    # The newer system doesn't provide contact-level frisk info,\n",
@@ -121,10 +141,10 @@
     "    # whether the people involved in that contact were frisked.\n",
     "    contacts_with_no_data = contact_df.fc_involved_frisk_or_search.isnull()\n",
     "    contact_involved_frisk = people_df.groupby(\"fc_num\").apply(\n",
-    "        lambda g: \"Y\"\n",
-    "        if (g.person_frisked_or_searched == \"Y\").any()\n",
-    "        else \"N\"\n",
-    "        if (g.person_frisked_or_searched == \"N\").all()\n",
+    "        lambda g: \"y\"\n",
+    "        if (g.person_frisked_or_searched == \"y\").any()\n",
+    "        else \"n\"\n",
+    "        if (g.person_frisked_or_searched == \"n\").all()\n",
     "        else np.nan\n",
     "    )\n",
     "    contact_df.loc[contacts_with_no_data, \"fc_involved_frisk_or_search\"] = contact_df[\n",
@@ -143,30 +163,26 @@
     "    \"\"\"\n",
     "    contact_df.vehicle_type = contact_df.vehicle_type.replace(\n",
     "        {\n",
-    "            \"Scooter\": \"Motorcycle or Scooter\",\n",
-    "            \"Cargo Van\": \"SUV or Utility Van\",\n",
-    "            \"Suv (sport Utility Vehicle)\": \"SUV or Utility Van\",\n",
-    "            \"Passenger Van\": \"Bus or Passenger Van\",\n",
-    "            \"Bus/Passenger Van\": \"Bus or Passenger Van\",\n",
-    "            \"Passenger Car/ Automobile\": \"Passenger Car\",\n",
+    "            \"scooter\": \"motorcycle or scooter\",\n",
+    "            \"cargo van\": \"suv or utility van\",\n",
+    "            \"suv (sport utility vehicle)\": \"suv or utility van\",\n",
+    "            \"passenger van\": \"bus or passenger van\",\n",
+    "            \"bus/passenger van\": \"bus or passenger van\",\n",
+    "            \"passenger car/ automobile\": \"passenger car\",\n",
     "        }\n",
     "    )\n",
-    "    contact_df.vehicle_color = (\n",
-    "        contact_df.vehicle_color.str.lower()\n",
-    "        .str.strip()\n",
-    "        .replace(\n",
-    "            {\n",
-    "                \"bla\": \"black\",\n",
-    "                \"gra\": \"gray\",\n",
-    "                \"gre\": \"green\",\n",
-    "                \"lt. green\": \"light green\",\n",
-    "                \"lt. blue\": \"light blue\",\n",
-    "            }\n",
-    "        )\n",
+    "    contact_df.vehicle_color = contact_df.vehicle_color.str.strip().replace(\n",
+    "        {\n",
+    "            \"bla\": \"black\",\n",
+    "            \"gra\": \"gray\",\n",
+    "            \"gre\": \"green\",\n",
+    "            \"lt. green\": \"light green\",\n",
+    "            \"lt. blue\": \"light blue\",\n",
+    "        }\n",
     "    )\n",
     "\n",
     "    def fix_year(year: str) -> str:\n",
-    "        if not year or year in (\"None\", \"NULL\"):\n",
+    "        if not year or year in (\"none\", \"null\"):\n",
     "            return year\n",
     "        num_year = float(year)\n",
     "        if np.isnan(num_year):\n",
@@ -175,7 +191,7 @@
     "            return year\n",
     "        if num_year > 99:\n",
     "            # Exclude definite typos\n",
-    "            return \"NULL\"\n",
+    "            return \"null\"\n",
     "        if num_year < 10:\n",
     "            return f\"200{year}\"\n",
     "        if num_year < 21:\n",
@@ -195,6 +211,7 @@
     "    and drop a duplicate column from the **people** table.\n",
     "    \"\"\"\n",
     "    contact_df.contact_date = pd.to_datetime(contact_df.contact_date)\n",
+    "    people_df = people_df.drop(columns=[\"contact_date\"])\n",
     "\n",
     "    return contact_df, people_df\n",
     "\n",
@@ -223,7 +240,6 @@
     "        if not clean_name:\n",
     "            raise Exception(f\"Encountered name with unexpected structure: {name}\")\n",
     "\n",
-    "        clean_name = clean_name.upper()\n",
     "        observed_names[id] = clean_name\n",
     "        return clean_name\n",
     "\n",
@@ -246,7 +262,6 @@
     "    contact_df.loc[empty_narrative, \"narrative\"] = contact_df[\n",
     "        empty_narrative\n",
     "    ].contact_reason\n",
-    "    contact_df.narrative = contact_df.narrative.str.upper()\n",
     "    contact_df = contact_df.drop(columns=[\"contact_reason\"])\n",
     "    return contact_df, people_df\n",
     "\n",
@@ -257,63 +272,63 @@
     "    There are lots of typos and inconsistencies in the **contacts** table's `city` column, so fix them.\n",
     "    Warning: current solution is not robust to *new* typos, should the data change.\n",
     "    \"\"\"\n",
-    "    BOSTON = \"BOSTON\"\n",
-    "    SOUTHIE = \"SOUTH BOSTON\"\n",
-    "    DORCHESTER = \"DORCHESTER\"\n",
-    "    CHARLESTOWN = \"CHARLESTOWN\"\n",
-    "    JP = \"JAMAICA PLAIN\"\n",
-    "    EASTIE = \"EAST BOSTON\"\n",
-    "    MATTAPAN = \"MATTAPAN\"\n",
-    "    ROXBURY = \"ROXBURY\"\n",
-    "    HYDEPARK = \"HYDE PARK\"\n",
-    "    contact_df.city = contact_df.city.str.upper()\n",
+    "    BOSTON = \"boston\"\n",
+    "    SOUTHIE = \"south boston\"\n",
+    "    DORCHESTER = \"dorchester\"\n",
+    "    CHARLESTOWN = \"charlestown\"\n",
+    "    JP = \"jamaica plain\"\n",
+    "    EASTIE = \"east boston\"\n",
+    "    MATTAPAN = \"mattapan\"\n",
+    "    ROXBURY = \"roxbury\"\n",
+    "    HYDEPARK = \"hyde park\"\n",
     "    contact_df.city = contact_df.city.replace(\n",
     "        {\n",
-    "            \"BSTN\": BOSTON,\n",
-    "            \"SO.BOSTON\": SOUTHIE,\n",
-    "            \"DORCCHESTER\": DORCHESTER,\n",
-    "            \"CHAARLESTOWN\": CHARLESTOWN,\n",
-    "            \"JP\": JP,\n",
-    "            \"EAST BOS\": EASTIE,\n",
-    "            \"CHALRESTOWN\": CHARLESTOWN,\n",
-    "            \"EAST BOSTN\": EASTIE,\n",
-    "            \"DOR\": DORCHESTER,\n",
-    "            \"MT\": MATTAPAN,\n",
-    "            \"S BOSTON\": SOUTHIE,\n",
-    "            \"DORCHSTER\": DORCHESTER,\n",
-    "            \"BST\": BOSTON,\n",
-    "            \"S BSTN\": SOUTHIE,\n",
-    "            \"DORCHESTERR\": DORCHESTER,\n",
-    "            \"JAMAIICA PLAIN\": JP,\n",
-    "            \"ROXBURY MA\": ROXBURY,\n",
-    "            \"SO BOSTON\": SOUTHIE,\n",
-    "            \"E. BOSTON\": EASTIE,\n",
-    "            \"JAMAICA\": JP,\n",
-    "            \"DDORCHESTER\": DORCHESTER,\n",
-    "            \"MATTPAN\": MATTAPAN,\n",
-    "            \"JAMAICIA\": JP,\n",
-    "            \"S. BOSTON\": SOUTHIE,\n",
-    "            \"HP\": HYDEPARK,\n",
-    "            \"DORCHEST\": DORCHESTER,\n",
-    "            \"SBOS\": SOUTHIE,\n",
-    "            \"ROX\": ROXBURY,\n",
-    "            \"CHARLESTWON\": CHARLESTOWN,\n",
-    "            \"JAMACIA PLAIN\": JP,\n",
-    "            \"ROBURY\": ROXBURY,\n",
-    "            \"BTSN\": BOSTON,\n",
-    "            \"SOMMERVILLE\": \"SOMERVILLE\",\n",
-    "            \"JAMAICIA PLAIN\": JP,\n",
-    "            \"S.BOSTON\": SOUTHIE,\n",
-    "            \"DOR.\": DORCHESTER,\n",
-    "            \"E BOSTON\": EASTIE,\n",
-    "            \"E.BOSTON\": EASTIE,\n",
-    "            \"BOSTOB\": BOSTON,\n",
-    "            \"ROSLINDLAE\": \"ROSLINDALE\",\n",
-    "            \"BSNT\": BOSTON,\n",
-    "            \"BSTNA\": BOSTON,\n",
-    "            \"BSTON\": BOSTON,\n",
-    "            \"JAMAIACA PLAIN\": JP,\n",
-    "            \"SO. BOSTON\": SOUTHIE,\n",
+    "            \"bstn\": BOSTON,\n",
+    "            \"so.boston\": SOUTHIE,\n",
+    "            \"dorcchester\": DORCHESTER,\n",
+    "            \"chaarlestown\": CHARLESTOWN,\n",
+    "            \"jp\": JP,\n",
+    "            \"east bos\": EASTIE,\n",
+    "            \"chalrestown\": CHARLESTOWN,\n",
+    "            \"east bostn\": EASTIE,\n",
+    "            \"dor\": DORCHESTER,\n",
+    "            \"mt\": MATTAPAN,\n",
+    "            \"s boston\": SOUTHIE,\n",
+    "            \"dorchster\": DORCHESTER,\n",
+    "            \"bst\": BOSTON,\n",
+    "            \"s bstn\": SOUTHIE,\n",
+    "            \"dorchesterr\": DORCHESTER,\n",
+    "            \"jamaiica plain\": JP,\n",
+    "            \"roxbury ma\": ROXBURY,\n",
+    "            \"so boston\": SOUTHIE,\n",
+    "            \"e. boston\": EASTIE,\n",
+    "            \"jamaica\": JP,\n",
+    "            \"ddorchester\": DORCHESTER,\n",
+    "            \"mattpan\": MATTAPAN,\n",
+    "            \"jamaicia\": JP,\n",
+    "            \"s. boston\": SOUTHIE,\n",
+    "            \"hp\": HYDEPARK,\n",
+    "            \"dorchest\": DORCHESTER,\n",
+    "            \"sbos\": SOUTHIE,\n",
+    "            \"rox\": ROXBURY,\n",
+    "            \"charlestwon\": CHARLESTOWN,\n",
+    "            \"jamacia plain\": JP,\n",
+    "            \"robury\": ROXBURY,\n",
+    "            \"btsn\": BOSTON,\n",
+    "            \"sommerville\": \"somerville\",\n",
+    "            \"jamaicia plain\": JP,\n",
+    "            \"s.boston\": SOUTHIE,\n",
+    "            \"dor.\": DORCHESTER,\n",
+    "            \"e boston\": EASTIE,\n",
+    "            \"e.boston\": EASTIE,\n",
+    "            \"bostob\": BOSTON,\n",
+    "            \"roslindlae\": \"ROSLINDALE\",\n",
+    "            \"bsnt\": BOSTON,\n",
+    "            \"bstna\": BOSTON,\n",
+    "            \"bston\": BOSTON,\n",
+    "            \"jamaiaca plain\": JP,\n",
+    "            \"so. boston\": SOUTHIE,\n",
+    "            \"unkown\": \"unknown\",\n",
     "        }\n",
     "    )\n",
     "    return contact_df, people_df\n",
@@ -333,7 +348,7 @@
     "    \"\"\"Merge the **people** table's older `complexion` column into the newer `skin_tone` column.\"\"\"\n",
     "    empty_skin_tone = people_df.skin_tone.isnull()\n",
     "    people_df.loc[empty_skin_tone, \"skin_tone\"] = people_df.complexion[empty_skin_tone]\n",
-    "    people_df.skin_tone = people_df.skin_tone.replace({\"OTHER\": \"Other\"})\n",
+    "    people_df.skin_tone = people_df.skin_tone\n",
     "    people_df = people_df.drop(columns=[\"complexion\"])\n",
     "    return contact_df, people_df\n",
     "\n",
@@ -353,11 +368,11 @@
     "    \"\"\"Reconcile the **people** table's `hair_style` values that seem to mean the same thing.\"\"\"\n",
     "    people_df.hair_style = people_df.hair_style.replace(\n",
     "        {\n",
-    "            \"Receding / Thin\": \"Receding or Thin\",\n",
-    "            \"Receding or Slightly Receding\": \"Receding or Thin\",\n",
-    "            \"Bald\": \"Bald or Balding\",\n",
-    "            \"Braids\": \"Braided\",\n",
-    "            \"Wig/hair Piece\": \"Wig or Hair Piece\",\n",
+    "            \"receding / thin\": \"receding or thin\",\n",
+    "            \"receding or slightly receding\": \"receding or thin\",\n",
+    "            \"bald\": \"bald or balding\",\n",
+    "            \"braids\": \"braided\",\n",
+    "            \"wig/hair piece\": \"wig or hair piece\",\n",
     "        }\n",
     "    )\n",
     "    return contact_df, people_df\n",
@@ -367,7 +382,7 @@
     "def reconcile_race(contact_df, people_df):\n",
     "    \"\"\"Reconcile **people** table `race` values that seem to mean the same thing.\"\"\"\n",
     "    people_df.race = people_df.race.replace(\n",
-    "        {\"American Indian or Alaskan Native\": \"Native American / Alaskan Native\"}\n",
+    "        {\"american indian or alaskan native\": \"native american / alaskan native\"}\n",
     "    )\n",
     "    return contact_df, people_df\n",
     "\n",
@@ -391,26 +406,26 @@
     "\n",
     "        # A stop longer than 8 hours seems really implausible\n",
     "        if d > 500:\n",
-    "            return \"NULL\"\n",
+    "            return \"null\"\n",
     "        if d < 5:\n",
-    "            return \"Less Than Five Minutes\"\n",
+    "            return \"less than five minutes\"\n",
     "        if d < 10:\n",
-    "            return \"Five to Ten Minutes\"\n",
+    "            return \"five to ten minutes\"\n",
     "        if d < 15:\n",
-    "            return \"Ten to Fifteen Minutes\"\n",
+    "            return \"ten to fifteen minutes\"\n",
     "        if d < 20:\n",
-    "            return \"Fifteen to Twenty Minutes\"\n",
+    "            return \"fifteen to twenty minutes\"\n",
     "        if d < 25:\n",
-    "            return \"Twenty to Twenty-Five Minutes\"\n",
+    "            return \"twenty to twenty-five minutes\"\n",
     "        if d < 30:\n",
-    "            return \"Twenty-Five to Thirty Minutes\"\n",
+    "            return \"twenty-five to thirty minutes\"\n",
     "        if d < 45:\n",
-    "            return \"Thirty to Forty-Five Minutes\"\n",
+    "            return \"thirty to forty-five minutes\"\n",
     "        if d < 60:\n",
-    "            return \"Forty-Five to Sixty Minutes\"\n",
+    "            return \"forty-five to sixty minutes\"\n",
     "        if d < 120:\n",
-    "            return \"One to Two Hours\"\n",
-    "        return \"Longer Than Two Hours\"\n",
+    "            return \"one to two hours\"\n",
+    "        return \"longer than two hours\"\n",
     "\n",
     "    contact_df.stop_duration = contact_df.stop_duration.apply(bucket_stop_duration)\n",
     "    return contact_df, people_df\n",
@@ -418,11 +433,18 @@
     "\n",
     "@register_transform\n",
     "def clean_location_info(contact_df, people_df):\n",
-    "    \"\"\"Combine the **contacts** table's `street` and `streetaddr` columns into single `street` column, and trim extra digits from `zip`.\"\"\"\n",
+    "    \"\"\"\n",
+    "    Combine the **contacts** table's `street` and `streetaddr` columns into single `street` column, \n",
+    "    drop `streedaddr`, and trim extra digits from `zip`.\n",
+    "    \"\"\"\n",
     "    empty_street = contact_df.street.isnull()\n",
     "    contact_df.loc[empty_street, \"street\"] = contact_df.streetaddr[empty_street]\n",
     "    contact_df.street = contact_df.street.apply(lambda s: s.replace(\"&\", \"/\"))\n",
+    "\n",
+    "    contact_df = contact_df.drop(columns=[\"streetaddr\"])\n",
+    "\n",
     "    contact_df.zip = contact_df.zip.apply(lambda zip: zip.split(\"-\")[0])\n",
+    "\n",
     "    return contact_df, people_df\n",
     "\n",
     "\n",
@@ -432,7 +454,7 @@
     "    The values `''`, `'NULL'`, and `'None'` are used to signify no value was entered in various fields across the dataset.\n",
     "    Replace these values with `np.nan`.\n",
     "    \"\"\"\n",
-    "    replacements = {\"\": np.nan, \"NULL\": np.nan, \"None\": np.nan}\n",
+    "    replacements = {\"\": np.nan, \"null\": np.nan, \"none\": np.nan}\n",
     "    contact_df = contact_df.replace(replacements)\n",
     "    people_df = people_df.replace(replacements)\n",
     "    return contact_df, people_df\n",
