--- a/process_bpd_fio_data.ipynb
+++ b/process_bpd_fio_data.ipynb
@@ -597,8 +597,8 @@
     }
    ],
    "source": [
-    "clean_contact_df.to_csv(\"foi_contacts.csv\", index=False)\n",
-    "clean_people_df.to_csv(\"foi_people.csv\", index=False)"
+    "clean_contact_df.to_csv(\"fio_contacts.csv\", index=False)\n",
+    "clean_people_df.to_csv(\"fio_people.csv\", index=False)"
    ]
   },
   {
@@ -678,7 +678,7 @@
     "json_contact_df[\"people\"] = json_contact_df.index.map(\n",
     "    lambda fc_num: people_dicts.loc[fc_num]\n",
     ")\n",
-    "with open(\"nested_foi_data.json\", \"w\") as json_file:\n",
+    "with open(\"nested_fio_data.json\", \"w\") as json_file:\n",
     "    json_contact_df.to_json(json_file, orient=\"index\")"
    ]
   },
