camel-case-ify JSON keys

--- a/process_bpd_fio_data.ipynb
+++ b/process_bpd_fio_data.ipynb
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -611,9 +611,9 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 11;\n",
-       "                var nbb_unformatted_code = \"people_dicts = clean_people_df.groupby(\\\"fc_num\\\").apply(lambda g: g.to_dict(\\\"r\\\"))\";\n",
-       "                var nbb_formatted_code = \"people_dicts = clean_people_df.groupby(\\\"fc_num\\\").apply(lambda g: g.to_dict(\\\"r\\\"))\";\n",
+       "                var nbb_cell_id = 18;\n",
+       "                var nbb_unformatted_code = \"def to_camel_case(snake_str):\\n    components = snake_str.split(\\\"_\\\")\\n    return components[0] + \\\"\\\".join(x.title() for x in components[1:])\\n\\njson_contact_df, json_people_df = clean_contact_df.copy(), clean_people_df.copy()\\njson_contact_df.columns = json_contact_df.columns.map(to_camel_case)\\njson_people_df.columns = json_people_df.columns.map(to_camel_case)\";\n",
+       "                var nbb_formatted_code = \"def to_camel_case(snake_str):\\n    components = snake_str.split(\\\"_\\\")\\n    return components[0] + \\\"\\\".join(x.title() for x in components[1:])\\n\\n\\njson_contact_df, json_people_df = clean_contact_df.copy(), clean_people_df.copy()\\njson_contact_df.columns = json_contact_df.columns.map(to_camel_case)\\njson_people_df.columns = json_people_df.columns.map(to_camel_case)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
        "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
@@ -635,46 +635,33 @@
     }
    ],
    "source": [
-    "people_dicts = clean_people_df.groupby(\"fc_num\").apply(lambda g: g.to_dict(\"r\"))"
+    "def to_camel_case(snake_str):\n",
+    "    components = snake_str.split(\"_\")\n",
+    "    return components[0] + \"\".join(x.title() for x in components[1:])\n",
+    "\n",
+    "json_contact_df, json_people_df = clean_contact_df.copy(), clean_people_df.copy()\n",
+    "json_contact_df.columns = json_contact_df.columns.map(to_camel_case)\n",
+    "json_people_df.columns = json_people_df.columns.map(to_camel_case)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "people_dicts = json_people_df.groupby(\"fcNum\").apply(lambda g: g.to_dict(\"r\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 15;\n",
-       "                var nbb_unformatted_code = \"json_contact_df = clean_contact_df.set_index(\\\"fc_num\\\")\\njson_contact_df[\\\"people\\\"] = json_contact_df.index.map(\\n    lambda fc_num: people_dicts.loc[fc_num]\\n)\\nwith open(\\\"nested_foi_data.json\\\", \\\"w\\\") as json_file:\\n    json_contact_df.to_json(json_file, orient=\\\"index\\\")\";\n",
-       "                var nbb_formatted_code = \"json_contact_df = clean_contact_df.set_index(\\\"fc_num\\\")\\njson_contact_df[\\\"people\\\"] = json_contact_df.index.map(\\n    lambda fc_num: people_dicts.loc[fc_num]\\n)\\nwith open(\\\"nested_foi_data.json\\\", \\\"w\\\") as json_file:\\n    json_contact_df.to_json(json_file, orient=\\\"index\\\")\";\n",
-       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
-       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
-       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
-       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
-       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
-       "                        }\n",
-       "                        break;\n",
-       "                    }\n",
-       "                }\n",
-       "            }, 500);\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "json_contact_df = clean_contact_df.set_index(\"fc_num\")\n",
+    "json_contact_df = json_contact_df.set_index(\"fcNum\")\n",
     "json_contact_df[\"people\"] = json_contact_df.index.map(\n",
     "    lambda fc_num: people_dicts.loc[fc_num]\n",
     ")\n",
