Add missing fcNum property to JSON representation

--- a/process_bpd_fio_data.ipynb
+++ b/process_bpd_fio_data.ipynb
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -611,8 +611,8 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 18;\n",
-       "                var nbb_unformatted_code = \"def to_camel_case(snake_str):\\n    components = snake_str.split(\\\"_\\\")\\n    return components[0] + \\\"\\\".join(x.title() for x in components[1:])\\n\\njson_contact_df, json_people_df = clean_contact_df.copy(), clean_people_df.copy()\\njson_contact_df.columns = json_contact_df.columns.map(to_camel_case)\\njson_people_df.columns = json_people_df.columns.map(to_camel_case)\";\n",
+       "                var nbb_cell_id = 26;\n",
+       "                var nbb_unformatted_code = \"def to_camel_case(snake_str):\\n    components = snake_str.split(\\\"_\\\")\\n    return components[0] + \\\"\\\".join(x.title() for x in components[1:])\\n\\n\\njson_contact_df, json_people_df = clean_contact_df.copy(), clean_people_df.copy()\\njson_contact_df.columns = json_contact_df.columns.map(to_camel_case)\\njson_people_df.columns = json_people_df.columns.map(to_camel_case)\";\n",
        "                var nbb_formatted_code = \"def to_camel_case(snake_str):\\n    components = snake_str.split(\\\"_\\\")\\n    return components[0] + \\\"\\\".join(x.title() for x in components[1:])\\n\\n\\njson_contact_df, json_people_df = clean_contact_df.copy(), clean_people_df.copy()\\njson_contact_df.columns = json_contact_df.columns.map(to_camel_case)\\njson_people_df.columns = json_people_df.columns.map(to_camel_case)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
@@ -639,6 +639,7 @@
     "    components = snake_str.split(\"_\")\n",
     "    return components[0] + \"\".join(x.title() for x in components[1:])\n",
     "\n",
+    "\n",
     "json_contact_df, json_people_df = clean_contact_df.copy(), clean_people_df.copy()\n",
     "json_contact_df.columns = json_contact_df.columns.map(to_camel_case)\n",
     "json_people_df.columns = json_people_df.columns.map(to_camel_case)"
@@ -662,6 +663,7 @@
    "outputs": [],
    "source": [
     "json_contact_df = json_contact_df.set_index(\"fcNum\")\n",
+    "json_contact_df[\"fcNum\"] = json_contact_df.index\n",
     "json_contact_df[\"people\"] = json_contact_df.index.map(\n",
     "    lambda fc_num: people_dicts.loc[fc_num]\n",
     ")\n",
