Add 'year' column

--- a/process_bpd_fio_data.ipynb
+++ b/process_bpd_fio_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false,
     "tags": [
@@ -458,7 +458,7 @@
     "\n",
     "\n",
     "@register_transform\n",
-    "def sex_to_gender(contact_df, people_df) -> pd.DataFrame:\n",
+    "def sex_to_gender(contact_df, people_df):\n",
     "    \"\"\"\n",
     "    The `sex` column in the **people** table might more accurately be called `gender`. Also, tweak column values accordingly.\n",
     "    \"\"\"\n",
@@ -475,7 +475,7 @@
     "\n",
     "\n",
     "@register_transform\n",
-    "def clean_empty_values(contact_df, people_df) -> pd.DataFrame:\n",
+    "def clean_empty_values(contact_df, people_df):\n",
     "    \"\"\"\n",
     "    The values `''`, `'NULL'`, and `'None'` are used to signify no value was entered in various fields across the dataset.\n",
     "    Replace these values with `np.nan`.\n",
@@ -485,6 +485,13 @@
     "    people_df = people_df.replace(replacements)\n",
     "    return contact_df, people_df\n",
     "\n",
+    "@register_transform\n",
+    "def add_year_column(contact_df, people_df):\n",
+    "    \"\"\"\n",
+    "    Add a year column derived from the contactDate column\n",
+    "    \"\"\"\n",
+    "    contact_df = contact_df.assign(year=contact_df.contact_date.dt.year.astype(str))\n",
+    "    return contact_df, people_df\n",
     "\n",
     "clean_contact_df, clean_people_df = apply_transforms(contact_df, people_df)"
    ]
@@ -498,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
@@ -548,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,37 +598,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 174;\n",
-       "                var nbb_unformatted_code = \"readme_changelist = \\\"\\\\n\\\".join([f\\\"- {f.__doc__.strip()}\\\" for f in df_transforms])\\n\\nwith open(\\\"README.md\\\", \\\"r\\\") as readme:\\n    readme_body = readme.read()\\n    readme_trunc_body, _ = readme_body.split(\\\"## Data-cleaning operations\\\")\\n\\nwith open(\\\"README.md\\\", \\\"w\\\") as readme:\\n    readme.write(\\n        f\\\"{readme_trunc_body}\\\\n## Data-cleaning operations\\\\n{readme_changelist}\\\"\\n    )\";\n",
-       "                var nbb_formatted_code = \"readme_changelist = \\\"\\\\n\\\".join([f\\\"- {f.__doc__.strip()}\\\" for f in df_transforms])\\n\\nwith open(\\\"README.md\\\", \\\"r\\\") as readme:\\n    readme_body = readme.read()\\n    readme_trunc_body, _ = readme_body.split(\\\"## Data-cleaning operations\\\")\\n\\nwith open(\\\"README.md\\\", \\\"w\\\") as readme:\\n    readme.write(\\n        f\\\"{readme_trunc_body}\\\\n## Data-cleaning operations\\\\n{readme_changelist}\\\"\\n    )\";\n",
-       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
-       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
-       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
-       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
-       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
-       "                        }\n",
-       "                        break;\n",
-       "                    }\n",
-       "                }\n",
-       "            }, 500);\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "readme_changelist = \"\\n\".join([f\"- {f.__doc__.strip()}\" for f in df_transforms])\n",
     "\n",
@@ -633,6 +612,15 @@
     "    readme.write(\n",
     "        f\"{readme_trunc_body}\\n## Data-cleaning operations\\n{readme_changelist}\"\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_contact_df.year.unique()"
    ]
   }
  ],
