Add 2015 (new RMS) data

--- a/process_bpd_fio_data.ipynb
+++ b/process_bpd_fio_data.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,9 @@
     "    return f\"https://data.boston.gov/api/3/action/datastore_search?resource_id={resource_id}&limit=100000\"\n",
     "\n",
     "\n",
-    "# List table URLs by order of year: 2016, 2017, 2018, 2019\n",
+    "# List table URLs by order of year: 2015 (June onwards), 2016, 2017, 2018, 2019\n",
     "contact_urls = [\n",
+    "    make_url(\"8119eb8d-6ee8-412d-a45d-53c367a98cea\"),\n",
     "    make_url(\"35f3fb8f-4a01-4242-9758-f664e7ead125\"),\n",
     "    make_url(\"c72b9288-2658-4e6a-9686-ffdcacb585e7\"),\n",
     "    make_url(\"ee4f1175-54b6-4d06-bceb-26d349118e25\"),\n",
@@ -47,6 +48,7 @@
     "    make_url(\"03f33240-47c1-46f2-87ae-bcdabec092ad\"),\n",
     "]\n",
     "people_urls = [\n",
+    "    make_url(\"34453828-67ca-45f1-a31d-526b11ca49f4\"),\n",
     "    make_url(\"ebb9c51c-6e9a-40a4-94d0-895de9bf47ad\"),\n",
     "    make_url(\"f18a0632-46ea-4032-9749-f5b50cf7b865\"),\n",
     "    make_url(\"aa46b3ad-1526-4551-9f0f-6dbdfbb429c0\"),\n",
@@ -60,6 +62,94 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>contact_date</th>\n",
+       "      <th>fc_num</th>\n",
+       "      <th>complexion</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>race</th>\n",
+       "      <th>recnum</th>\n",
+       "      <th>build</th>\n",
+       "      <th>hair_style</th>\n",
+       "      <th>otherclothing</th>\n",
+       "      <th>age</th>\n",
+       "      <th>ethnicity</th>\n",
+       "      <th>skin_tone</th>\n",
+       "      <th>license_state</th>\n",
+       "      <th>frisk/search</th>\n",
+       "      <th>deceased</th>\n",
+       "      <th>license_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11987</th>\n",
+       "      <td>0217-04-17T12:30:00</td>\n",
+       "      <td>F170026060</td>\n",
+       "      <td></td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>100034452</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>-1778</td>\n",
+       "      <td></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              contact_date      fc_num complexion   sex     race     recnum  \\\n",
+       "11987  0217-04-17T12:30:00  F170026060             Male  Unknown  100034452   \n",
+       "\n",
+       "      build hair_style otherclothing    age ethnicity skin_tone license_state  \\\n",
+       "11987                                 -1778                 NaN           NaN   \n",
+       "\n",
+       "      frisk/search deceased license_type  \n",
+       "11987          NaN      NaN          NaN  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "people_df[people_df.fc_num == 'F170026060']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -68,9 +158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {
-    "scrolled": false,
+    "scrolled": true,
     "tags": [
      "outputPrepend"
     ]
@@ -219,6 +309,12 @@
     "    Convert the `contact_date` column in the **contacts** table to datetime, \n",
     "    and drop a duplicate column from the **people** table.\n",
     "    \"\"\"\n",
+    "    # One record in the 2015 dataset's contact_date appears to have gotten corrupted in some way,\n",
+    "    # so just set that record's contact_date to \"2015\"\n",
+    "    weird_date = '0217-04-17t12:30:00'\n",
+    "    contact_df = contact_df[contact_df.contact_date != weird_date]\n",
+    "    people_df = people_df[people_df.contact_date != weird_date]\n",
+    "\n",
     "    contact_df.contact_date = pd.to_datetime(contact_df.contact_date)\n",
     "    people_df = people_df.drop(columns=[\"contact_date\"])\n",
     "\n",
@@ -238,6 +334,10 @@
     "            return observed_names[id]\n",
     "\n",
     "        name = name.replace(\".\", \"\")\n",
+    "        \n",
+    "        if name.strip() == \",\":\n",
+    "            return None\n",
+    "        \n",
     "        split_name = [part.strip() for part in name.split(\",\")]\n",
     "        clean_name = None\n",
     "        if len(split_name) == 1:\n",
@@ -246,7 +346,7 @@
     "            last_part, *first_part = split_name\n",
     "            clean_name = f'{\" \".join(first_part)} {last_part}'\n",
     "\n",
-    "        if not clean_name:\n",
+    "        if clean_name is None:\n",
     "            raise Exception(f\"Encountered name with unexpected structure: {name}\")\n",
     "\n",
     "        observed_names[id] = clean_name\n",
@@ -505,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
@@ -555,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,15 +712,6 @@
     "    readme.write(\n",
     "        f\"{readme_trunc_body}\\n## Data-cleaning operations\\n{readme_changelist}\"\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_contact_df.year.unique()"
    ]
   }
  ],
