--- a/process_bpd_fio_data.ipynb
+++ b/process_bpd_fio_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,9 @@
     "    return f\"https://data.boston.gov/api/3/action/datastore_search?resource_id={resource_id}&limit=100000\"\n",
     "\n",
     "\n",
-    "# List table URLs by order of year: 2016, 2017, 2018, 2019\n",
+    "# List table URLs by order of year: 2015 (June onwards), 2016, 2017, 2018, 2019\n",
     "contact_urls = [\n",
+    "    make_url(\"8119eb8d-6ee8-412d-a45d-53c367a98cea\"),\n",
     "    make_url(\"35f3fb8f-4a01-4242-9758-f664e7ead125\"),\n",
     "    make_url(\"c72b9288-2658-4e6a-9686-ffdcacb585e7\"),\n",
     "    make_url(\"ee4f1175-54b6-4d06-bceb-26d349118e25\"),\n",
@@ -47,6 +48,7 @@
     "    make_url(\"03f33240-47c1-46f2-87ae-bcdabec092ad\"),\n",
     "]\n",
     "people_urls = [\n",
+    "    make_url(\"34453828-67ca-45f1-a31d-526b11ca49f4\"),\n",
     "    make_url(\"ebb9c51c-6e9a-40a4-94d0-895de9bf47ad\"),\n",
     "    make_url(\"f18a0632-46ea-4032-9749-f5b50cf7b865\"),\n",
     "    make_url(\"aa46b3ad-1526-4551-9f0f-6dbdfbb429c0\"),\n",
@@ -68,9 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
    "metadata": {
-    "scrolled": false,
+    "scrolled": true,
     "tags": [
      "outputPrepend"
     ]
@@ -219,7 +221,19 @@
     "    Convert the `contact_date` column in the **contacts** table to datetime, \n",
     "    and drop a duplicate column from the **people** table.\n",
     "    \"\"\"\n",
+    "    # One record in the 2015 dataset's contact_date appears to have gotten corrupted in some way,\n",
+    "    # so just set that record's contact_date to \"2015\"\n",
+    "    weird_date = '0217-04-17t12:30:00'\n",
+    "    contact_df = contact_df[contact_df.contact_date != weird_date]\n",
+    "    people_df = people_df[people_df.contact_date != weird_date]\n",
+    "\n",
     "    contact_df.contact_date = pd.to_datetime(contact_df.contact_date)\n",
+    "    \n",
+    "    # Certain contact date records for 2015 have years less than 2015 in their contact date.\n",
+    "    # This shouldn't be so.\n",
+    "    bad_year = contact_df.contact_date.dt.year.astype(int) < 2015\n",
+    "    contact_df.loc[bad_year, 'contact_date'] = contact_df.contact_date[bad_year] + pd.offsets.DateOffset(year=2015)\n",
+    "    \n",
     "    people_df = people_df.drop(columns=[\"contact_date\"])\n",
     "\n",
     "    return contact_df, people_df\n",
@@ -238,6 +252,10 @@
     "            return observed_names[id]\n",
     "\n",
     "        name = name.replace(\".\", \"\")\n",
+    "        \n",
+    "        if name.strip() == \",\":\n",
+    "            return np.nan\n",
+    "        \n",
     "        split_name = [part.strip() for part in name.split(\",\")]\n",
     "        clean_name = None\n",
     "        if len(split_name) == 1:\n",
@@ -246,7 +264,7 @@
     "            last_part, *first_part = split_name\n",
     "            clean_name = f'{\" \".join(first_part)} {last_part}'\n",
     "\n",
-    "        if not clean_name:\n",
+    "        if clean_name is None:\n",
     "            raise Exception(f\"Encountered name with unexpected structure: {name}\")\n",
     "\n",
     "        observed_names[id] = clean_name\n",
@@ -473,6 +491,13 @@
     "    )\n",
     "    return contact_df, people_df\n",
     "\n",
+    "@register_transform\n",
+    "def add_year_column(contact_df, people_df):\n",
+    "    \"\"\"\n",
+    "    Add a `year` column derived from the `contact_date` column.\n",
+    "    \"\"\"\n",
+    "    contact_df = contact_df.assign(year=contact_df.contact_date.dt.year.astype(str))\n",
+    "    return contact_df, people_df\n",
     "\n",
     "@register_transform\n",
     "def clean_empty_values(contact_df, people_df):\n",
@@ -483,14 +508,6 @@
     "    replacements = {\"\": np.nan, \"null\": np.nan, \"none\": np.nan}\n",
     "    contact_df = contact_df.replace(replacements)\n",
     "    people_df = people_df.replace(replacements)\n",
-    "    return contact_df, people_df\n",
-    "\n",
-    "@register_transform\n",
-    "def add_year_column(contact_df, people_df):\n",
-    "    \"\"\"\n",
-    "    Add a year column derived from the contactDate column\n",
-    "    \"\"\"\n",
-    "    contact_df = contact_df.assign(year=contact_df.contact_date.dt.year.astype(str))\n",
     "    return contact_df, people_df\n",
     "\n",
     "clean_contact_df, clean_people_df = apply_transforms(contact_df, people_df)"
@@ -505,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 79,
    "metadata": {
     "scrolled": false
    },
@@ -555,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,15 +629,6 @@
     "    readme.write(\n",
     "        f\"{readme_trunc_body}\\n## Data-cleaning operations\\n{readme_changelist}\"\n",
     "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_contact_df.year.unique()"
    ]
   }
  ],
